# 3D-solar-system-simulator

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
rust-physics/: Cargo.toml
rust-physics/pkg/: package.json  rust_physics.d.ts  rust_physics.js  rust_physics_bg.wasm  rust_physics_bg.wasm.d.ts
rust-physics/src/: lib.rs
src/: main.js  style.css
